<resources>
    <string name="app_name">project-IA</string>
    <string name="btnIniciar">Iniciar Sesión</string>
    <string name="btnCuenta">Crear Cuenta</string>
    <string name="tvBienvenido">BIENVENIDO</string>
    <string name="etUsuario"></string>
    <string name="etPassword"></string>
    <string name="etNombreUsuario"></string>
    <string name="etCorreoUsuario"></string>
    <string name="etPasswordUsuario"></string>
    <string name="tvAbrirCuenta">Crear Cuenta</string>
    <string name="btnCrearCuenta">Crear</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_create_venta">CreateVenta</string>
    <string name="tvInmoviliario">Inmoviliario</string>
    <string name="tvTipoInmueble">Tipo De Inmueble</string>
    <string name="etTipoInmueble"></string>
    <string name="btnTipoInmueble">Agregar</string>
    <string name="tvAgregarInmoviliario">Agregar Inmobiliario</string>
    <string name="btnAgregarInmueble">Agregar</string>
    <string name="etDescripcion"></string>
    <string name="etPrecio"></string>
    <string name="btnEliminarInmueble">Eliminar</string>
    <string name="btnUpdateInmueble">Actualizar</string>
    <string name="etCategoria"></string>
    <string name="btnModificar">Configurar</string>
    <string name="btnListarInmueble">Ver Inmuebles</string>
    <string name="btnUsuarios">Usuarios</string>
    <string name="tvUsuario">Usuario</string>
    <string name="tvCorreo">Correo</string>
    <string name="tvPassword">Contraseña</string>
    <string name="tvCategoria">Categoria</string>
    <string name="tvPrecio">Precio</string>
    <string name="tvDescripcion">Descripción</string>
    <string name="rvInmobiliario"></string>
    <string name="tvAgregarInmoviliarioCRUD">Inmobiliario</string>
    <string name="etCategoriaCRUD"></string>
    <string name="etPrecioCRUD"></string>
    <string name="etDescripcionCRUD"></string>
    <string name="registro">Registro de Usuarios</string>
    <string name="moviliario">Agregar Inmoviliario</string>
    <string name="listInmoviliarios">Lista de Inmoviliarios</string>
    <string name="listUsuarios">Lista de Usuarios</string>
    <string name="menue">MENÚ</string>
</resources>
