<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroung"
        tools:context=".CreateUsuario">

    <TextView
            android:text="@string/tvAbrirCuenta"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:id="@+id/tvAbrirCuenta" tools:text="Crear Cuenta"
            android:textSize="40sp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:textStyle="bold" android:layout_marginTop="48dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/etNombreUsuario"
            app:layout_constraintVertical_bias="0.111" android:textColor="#000"/>
    <EditText
            android:layout_width="325dp"
            android:layout_height="44dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etNombreUsuario" android:hint="Nombre de Usuario" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etCorreoUsuario"
            android:text="@string/etNombreUsuario" android:layout_marginBottom="36dp" android:textStyle="bold"
            android:textColor="#FFFFFF" android:textColorLink="#000000" android:textColorHint="#FFFFFF"/>
    <EditText
            android:layout_height="38dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etCorreoUsuario" android:hint="Correo Electrónio" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_width="325dp"
            android:text="@string/etCorreoUsuario" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/etPasswordUsuario" android:textStyle="bold"
            android:textColor="#FFFFFF" android:textColorLink="#000000" android:textColorHint="#FFFFFF"/>
    <EditText
            android:layout_width="325dp"
            android:layout_height="45dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etPasswordUsuario" android:hint="Contraseña" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:text="@string/etPasswordUsuario"
            android:layout_marginBottom="104dp" app:layout_constraintBottom_toTopOf="@+id/btnCrearCuenta"
            android:textStyle="bold" android:textColor="#FFFFFF" android:textColorLink="#000000"
            android:textColorHint="#FFFFFF"/>
    <Button
            android:text="@string/btnCrearCuenta"
            android:layout_width="179dp"
            android:layout_height="59dp"
            android:id="@+id/btnCrearCuenta" tools:text="Crear " app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="96dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textStyle="bold"/>

</android.support.constraint.ConstraintLayout>