<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
android:background="@drawable/backgroung">

    <EditText
            android:id="@+id/etUsuario"
            android:layout_width="343dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="156dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:ems="10"
            android:hint="Nombre de Usuario"
            android:inputType="textPersonName"
            android:text="@string/etUsuario"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/etPassword"
            android:layout_width="341dp"
            android:layout_height="47dp"
            android:layout_marginTop="80dp"
            android:ems="10"
            android:hint="Contraseña"
            android:inputType="textPersonName"
            android:text="@string/etPassword"
            android:textColor="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/etUsuario"
            app:layout_constraintStart_toStartOf="@+id/etUsuario"
            app:layout_constraintTop_toBottomOf="@+id/etUsuario" />

    <Button
            android:id="@+id/btnIniciar"
            android:layout_width="142dp"
            android:layout_height="60dp"
            android:text="@string/btnIniciar"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintHorizontal_bias="0.929"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.48000002" />

    <Button
            android:id="@+id/btnCuenta"
            android:layout_width="139dp"
            android:layout_height="61dp"
            android:layout_marginTop="156dp"
            android:text="@string/btnCuenta"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etPassword"
            app:layout_constraintHorizontal_bias="0.158"
            app:layout_constraintStart_toStartOf="@+id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            app:layout_constraintVertical_bias="0.0" />
</android.support.constraint.ConstraintLayout>