<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroung"
        tools:context=".CrudInmoviliario">

    <TextView
            android:text="@string/tvAgregarInmoviliario"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:id="@+id/tvInmoviliarioCRUD"
            tools:text="Inmoviliario" android:textStyle="bold" android:textSize="30sp"
            android:layout_marginTop="15dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/ivInmueble" app:layout_constraintVertical_bias="0.0"
            android:textColor="#000000" app:layout_constraintHorizontal_bias="0.497"/>
    <EditText
            android:layout_width="346dp"
            android:layout_height="56dp"
            android:inputType="textPersonName"
            android:text="@string/etDescripcionCRUD"
            android:ems="10"
            android:id="@+id/etDescripcion"
            android:hint="Descripción" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="6dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="6dp" app:layout_constraintHorizontal_bias="0.411"
            android:layout_marginBottom="116dp" app:layout_constraintBottom_toBottomOf="parent"
            android:textColor="#FFFFFF" android:textStyle="bold" android:textColorLink="#000000"
            android:textColorHint="#FFFFFF"/>
    <EditText
            android:layout_width="219dp"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:text="@string/etPrecioCRUD"
            android:ems="10"
            android:id="@+id/etPrecio" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.119"
            android:hint="Precio"
            app:layout_constraintBottom_toTopOf="@+id/etDescripcion" android:layout_marginBottom="12dp"
            android:textColor="#FFFFFF" android:textColorLink="#000000" android:textColorHint="#FFFFFF"
            android:textStyle="bold"/>
    <Button
            android:text="@string/btnEliminarInmueble"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnEliminarInmueble"
            tools:text="Eliminar"
            android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="52dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="52dp"
            android:layout_marginTop="13dp" app:layout_constraintTop_toBottomOf="@+id/etDescripcion"
            app:layout_constraintVertical_bias="1.0"/>
    <ImageView
            android:layout_width="367dp"
            android:layout_height="210dp" tools:srcCompat="@drawable/image_no_found"
            android:id="@+id/ivInmueble"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="384dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.495"/>
    <Button
            android:text="@string/btnUpdateInmueble"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnUpdateInmueble" tools:text="Actualizar" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginBottom="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnEliminarInmueble" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" app:layout_constraintHorizontal_bias="0.214"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etDescripcion"
            app:layout_constraintVertical_bias="0.975"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:inputType="textPersonName"
            android:text="@string/etCategoriaCRUD"
            android:ems="10"
            android:id="@+id/etCategoria"
            android:hint="Categoria" android:layout_marginEnd="12dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="12dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/etPrecio"
            app:layout_constraintHorizontal_bias="0.118" android:textColor="#FFFFFF"
            android:textStyle="bold" android:textColorLink="#000000" android:textColorHint="#FFFFFF"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="69dp"
            android:id="@+id/btnCamaraCRUD"
            android:drawableBottom="@drawable/baseline_add_a_photo_black_48"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="108dp"
            android:layout_marginStart="108dp" android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toTopOf="@+id/etCategoria" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivInmueble" app:layout_constraintVertical_bias="0.361"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="73dp"
            android:id="@+id/btnGaleriaCRUD"
            android:drawableBottom="@drawable/baseline_add_photo_alternate_black_48"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="108dp"
            android:layout_marginRight="108dp"
            android:layout_marginBottom="12dp" app:layout_constraintBottom_toTopOf="@+id/etCategoria"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/ivInmueble"
            app:layout_constraintVertical_bias="0.281" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="1.0"/>

</android.support.constraint.ConstraintLayout>