<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"

            android:layout_width="match_parent"

            android:layout_height="120dp" android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true">

        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                android:id="@+id/idConstraint">

                <TextView
                        android:text="@string/tvCorreo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tvCorreo"
                        android:layout_marginBottom="12dp"
                        app:layout_constraintBottom_toTopOf="@+id/tvPassword" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.022"
                        tools:text="Correo"/>
                <TextView
                        android:text="@string/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="16dp" android:id="@+id/tvPassword"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.023"
                        tools:text="Contraseña"/>
                <TextView
                        android:text="@string/tvUsuario"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:id="@+id/tvUsuario"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.023"
                        android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/tvCorreo"
                        app:layout_constraintVertical_bias="0.0" tools:text="Usuario"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
