<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"

        android:layout_width="match_parent"

        android:layout_height="450dp" android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true">
    <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true" android:layout_marginTop="0dp">
        <android.support.constraint.ConstraintLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <TextView
                    android:text="@string/tvCategoria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/tvCategoria"
                    tools:text="Categoria"
                    android:layout_marginBottom="48dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvPrecio"
                    android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
                    app:layout_constraintHorizontal_bias="0.085" android:textStyle="bold" android:textSize="18sp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"/>
            <ImageView
                    android:src="@drawable/image_no_found"
                    android:layout_width="353dp"
                    android:layout_height="167dp" android:id="@+id/imageView2"
                    android:layout_marginBottom="36dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvCategoria" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                    app:layout_constraintVertical_bias="0.0" android:layout_marginStart="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    app:layout_constraintHorizontal_bias="0.527"/>
            <TextView
                    android:text="@string/tvPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvPrecio" tools:text="Precio" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_marginBottom="56dp"
                    app:layout_constraintBottom_toTopOf="@+id/tvDescripcion"
                    app:layout_constraintHorizontal_bias="0.078" android:textStyle="bold" android:textSize="18sp"/>
            <TextView
                    android:text="@string/tvDescripcion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvDescripcion" tools:text="Descripción" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp" android:layout_marginBottom="60dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.09"
                    android:textStyle="bold" android:textSize="18sp"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>