<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgroung"
        tools:context=".AddInmoviliaria">

    <TextView
            android:text="@string/tvAgregarInmoviliario"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:id="@+id/tvAgregarInmoviliario"
            tools:text="Agregar Inmoviliario" android:textSize="30sp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:textStyle="bold" android:textColor="#000"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/ivInmueble"/>
    <EditText
            android:layout_width="346dp"
            android:layout_height="72dp"
            android:inputType="textPersonName"
            android:text="@string/etDescripcion"
            android:ems="10"
            android:id="@+id/etDescripcion"
            android:hint="Descripción" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginEnd="6dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="6dp" app:layout_constraintHorizontal_bias="0.568"
            app:layout_constraintBottom_toTopOf="@+id/btnEliminarInmueble"
            android:layout_marginBottom="12dp"
            android:textColorLink="#000000" android:textStyle="bold" android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"/>
    <EditText
            android:layout_width="219dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:text="@string/etPrecio"
            android:ems="10"
            android:id="@+id/etPrecio" android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="12dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.168"
            android:hint="Precio" android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@+id/etDescripcion"
            android:textColor="#FFFFFF" android:textColorLink="#000000" android:textColorHint="#FFFFFF"
            android:textStyle="bold"/>
    <Button
            android:text="@string/btnAgregarInmueble"
            android:layout_width="140dp"
            android:layout_height="52dp"
            android:id="@+id/btnEliminarInmueble" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" tools:text="Agregar"
            app:layout_constraintHorizontal_bias="0.498"/>
    <ImageView
            android:layout_width="356dp"
            android:layout_height="194dp" app:srcCompat="@drawable/image_no_found"
            android:id="@+id/ivInmueble"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.487"
            android:layout_marginBottom="380dp" app:layout_constraintBottom_toBottomOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="46dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/etCategoria" android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="12dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.163" android:layout_marginBottom="28dp"
            app:layout_constraintBottom_toTopOf="@+id/etPrecio" android:hint="Categoria"
            android:textColor="#000000" android:textColorLink="#000000" android:textColorHint="#FFFFFF"
            android:textStyle="bold"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:id="@+id/btnCamara"
            android:drawableBottom="@drawable/baseline_add_a_photo_black_48"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.328" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivInmueble" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etCategoria"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="69dp"
            android:id="@+id/btnGaleria"
            android:drawableBottom="@drawable/baseline_add_photo_alternate_black_48"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.723" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ivInmueble" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/etCategoria"/>
</android.support.constraint.ConstraintLayout>